  PropertySummaryModel.locked field added, DefaultPropertySummaryModel disables the changing of summary type if locked
  PropertySummaryPanel only displays popup menu if the model is not locked
  PropertySummaryModel.getValueProvider() added
  PropertySummaryModel.PropertyValueProvider.useValueSubset field added, implemented in DefaultPropertySummaryModel
  EntityUiUtil.initializeTextField() now sets the allowed range for numerical properties with min and max defined
  EntityEditPanel now shows the entity menu on ctrl-alt-V
  EntityEditPanel now shows the entity menu on alt-double click
  Controls.eventControl() added
  EntityUiUtil.showEntityMenu() now displays validity info
  EntityUiUtil.showEntityMenu() now displays original values
  DatabaseConnectionImpl renamed to DefaultDatabaseConnection
  EntityConnectionImpl renamed to DefaultEntityConnection
  EntityDefinition.staticData field added
  EntityLookupField.lookupEnabledState added as a hack to prevent the triggering of a lookup by closing the empty result message
  EntityTableCellRenderers.DefaultEntityTableCellRenderer made public
  EntityUiUtil.showEntityMenu() improved
  EntityTablePanel.EntityTableCellRenderer moved up to
  AbstractRemoteServer.disconnect() minor optimization
  Impl postfix exchanged for Default prefix for consistency
  Events.DefaultEventObserverImpl only fires when it has listeners
  Entity and Key implementations renamed back to Impl, for serializations sake man
  ValueMapEditModel.validate(final Collection<? extends ValueMap<K, V>> valueMaps) added
  DefaultEntityEditModel implements the above
  DefaultEntityEditModel.validate(Entity) added protected
  EntityUiUtil.populateForeignKeyMenu() improved
  EntityImpl.getValue() now returns null for non-loaded foreign key values while getForeignKeyValue() returns a empty entity
  EntityImpl.isValueNull() contract now respected for foreign key properties
  Entities.Validator takes advantage of the above, improved